--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ click==8.1.3
 crispy-bootstrap5==0.6
 Django==4.0.4
 django-crispy-forms==1.14.0
+djangorestframework==3.13.1
+drf-spectacular==0.22.1
 Faker==12.0.1
 folium==0.12.1.post1
 frozenlist==1.3.0
@@ -18,7 +20,9 @@ geographiclib==1.52
 geoip2==4.5.0
 geopy==2.2.0
 idna==3.3
+inflection==0.5.1
 Jinja2==3.1.2
+jsonschema==4.7.2
 MarkupSafe==2.1.1
 maxminddb==2.2.0
 mixer==7.2.2
@@ -28,11 +32,16 @@ mypy-extensions==0.4.3
 numpy==1.22.4
 pathspec==0.9.0
 platformdirs==2.5.2
+pyrsistent==0.18.1
 python-dateutil==2.8.2
+pytz==2022.1
+PyYAML==6.0
 requests==2.27.1
+simplejson==3.17.6
 six==1.16.0
 sqlparse==0.4.2
 tomli==2.0.1
 typing_extensions==4.2.0
+uritemplate==4.1.1
 urllib3==1.26.9
 yarl==1.7.2
